--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Shawn R | Portfolio</title>
+  <title>Your Name | Portfolio</title>
   <link rel="stylesheet" href="style.css"> <!-- External CSS -->
 </head>
 
@@ -13,7 +13,7 @@
   <!-- Header and Navigation -->
   <header>
     <div class="banner">
-      <h1>Shawn R.</h1>
+      <h1>Your Name</h1>
     </div>
     <nav>
       <ul>
@@ -55,9 +55,9 @@
       <div class="container">
         <h2>Contact Me</h2>
         <form>
-          <input type="text" placeholder="Your Name" required>
-          <input type="email" placeholder="Your Email" required>
-          <textarea placeholder="Your Message" required></textarea>
+          <input type="text" name="name" placeholder="Your Name" required>
+          <input type="email" name="email" placeholder="Your Email" required>
+          <textarea name="message" placeholder="Your Message" required></textarea>
           <button type="submit" class="btn">Send Message</button>
         </form>
       </div>
@@ -67,7 +67,7 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-      <p>&copy; 2024 Shawn. All Rights Reserved.</p>
+      <p>&copy; 2024 Your Name. All Rights Reserved.</p>
     </div>
   </footer>
   
