--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Name | Portfolio</title>
+  <title>Shawn R. | Portfolio</title>
   <link rel="stylesheet" href="style.css"> <!-- External CSS -->
 </head>
 
@@ -13,7 +13,7 @@
   <!-- Header and Navigation -->
   <header>
     <div class="banner">
-      <h1>Your Name</h1>
+      <h1>Shawn R.</h1>
     </div>
     <nav>
       <ul>
@@ -67,7 +67,7 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-      <p>&copy; 2024 Your Name. All Rights Reserved.</p>
+      <p>&copy; 2024 Shawn R. All Rights Reserved.</p>
     </div>
   </footer>
   
