--- a/index.html
+++ b/index.html
@@ -38,7 +38,16 @@
     <section id="about" class="about">
       <div class="container">
         <h2>About Me</h2>
-        <p>Brief introduction about your skills, background, and passion.</p>
+        <p>In have more than 14 years in test automation and quality assurance, I’ve built and
+maintained frameworks that balance technical precision with a focus on real-world
+applications. At Delta Air Lines, I led the creation of TypeScript-based Cypress tests and
+coordinated QA teams spread across different regions, always working to improve our
+test pipelines and team communication. My work at the USPTO allowed me to refine
+Java-based automation and streamline testing across multiple platforms, while my time
+as an instructor at PeopleNTech let me mentor future tech professionals. I got my start
+at the Virginia Department of Health, where hands-on experience with HP Quick Test Pro
+and Oracle-based testing set the stage for a rewarding career that blends practical
+problem-solving with continuous learning and collaboration.</p>
       </div>
     </section>
 
