--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@ problem-solving with continuous learning and collaboration.</p>
         <h2>Portfolio</h2>
         <div class="portfolio-items">
           <!-- Portfolio Items Here -->
+          <h3>Github Repo:</h3>
+          <div>https://github.com/PCnslt</div>
         </div>
       </div>
     </section>
