--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section id="about" class="about">
       <div class="container">
         <h2>About Me</h2>
-        <p>In have more than 14 years in test automation and quality assurance, I’ve built and
+        <p>I have more than 14 years in test automation and quality assurance, I’ve built and
 maintained frameworks that balance technical precision with a focus on real-world
 applications. At Delta Air Lines, I led the creation of TypeScript-based Cypress tests and
 coordinated QA teams spread across different regions, always working to improve our
