--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@ problem-solving with continuous learning and collaboration.</p>
           <!-- Portfolio Items Here -->
 
               <p>Github Repo:</p>
-              <p>https://github.com/PCnslt</p></br>
-              <p>Professional Services provided through:</p>
-              <p>https://promo-services.net/</p>
+<!--               <p>https://github.com/PCnslt</p></br> -->
+              <a href="https://github.com/PCnslt">https://github.com/PCnslt</a>
+              <p>E-Commerce website:</p>
+<!--               <p>https://promo-services.net/</p> -->
+              <a href="https://promo-services.net/">https://promo-services.net/</a>
 
         </div>
       </div>
