--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ problem-solving with continuous learning and collaboration.</p>
 
               <p>Github Repo:</p>
 <!--               <p>https://github.com/PCnslt</p></br> -->
-              <a href="https://github.com/PCnslt">https://github.com/PCnslt</a>
+              <a href="https://github.com/PCnslt">https://github.com/PCnslt</a></br>
               <p>E-Commerce website:</p>
 <!--               <p>https://promo-services.net/</p> -->
               <a href="https://promo-services.net/">https://promo-services.net/</a>
