--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                <div class="portfolio-items">
                   <!-- Portfolio Items Here -->
                   <p>LinkedIn Profile:</p>
-                  <a href="https://www.linkedin.com/in/m-rahman-sdet/">https://www.linkedin.com/in/m-rahman-sdet/</a><br>
+                  <a href="https://www.linkedin.com/in/m-rahman-sdet/">https://www.linkedin.com/in/m-rahman-sdet/</a><br/>
                   <p>Github Repo:</p>
-                  <a href="https://github.com/PCnslt">https://github.com/PCnslt</a><br>
+                  <a href="https://github.com/PCnslt">https://github.com/PCnslt</a><br/>
                   <p>E-Commerce website:</p>
-                  <a href="https://promo-services.net/">https://promo-services.net/</a>
+                  <a href="https://promo-services.net/">https://promo-services.net/</a><br/>
                   <h6>Some project links may be temporarily unavailable due to hosting cost constraints. Maintaining live demos incurs ongoing expenses, and I appreciate your understanding.</h6>
                </div>
             </div>
