Update contact me section.

--- a/index.html
+++ b/index.html
@@ -48,31 +48,26 @@
             </div>
          </section>
 
-         <section id="portfolio" class="portfolio">
-            <div class="container">
-               <h2>Portfolio</h2>
-               <div class="portfolio-items">
-                  <!-- Portfolio Items Here -->
-                  <p>LinkedIn Profile:</p>
-                  <a href="https://www.linkedin.com/in/m-rahman-sdet/">https://www.linkedin.com/in/m-rahman-sdet/</a><br/>
-                  <p>Github Repo:</p>
-                  <a href="https://github.com/PCnslt">https://github.com/PCnslt</a><br/>
-                  <p>E-Commerce website:</p>
-                  <a href="https://promo-services.net/">https://promo-services.net/</a><br/>
-                  <h6>Some project links may be temporarily unavailable due to hosting cost constraints. Maintaining live demos incurs ongoing expenses, and I appreciate your understanding.</h6>
-               </div>
-            </div>
-         </section>
-
          <section id="contact" class="contact">
             <div class="container">
                <h2>Contact Me</h2>
-               <form>
-                  <input type="text" name="name" placeholder="Your Name" required>
-                  <input type="email" name="email" placeholder="Your Email" required>
-                  <textarea name="message" placeholder="Your Message" required></textarea>
-                  <button type="submit" class="btn">Send Message</button>
-               </form>
+               <p>Feel free to reach out directly:</p>
+               <p>
+                  <strong>Phone:</strong> <a href="tel:+1-571-762-1680">+1-571-762-1680</a>
+               </p>
+               <p>
+                  <strong>Email:</strong> <a href="mailto:mushfiqrhmn1@gmail.com">mushfiqrhmn1@gmail.com</a>
+               </p>
+               <!-- The original form is removed -->
+            </div>
+         </section>
+            <div class="container">
+               <h2>Contact Me</h2>
+               Feel free to reach out directly:
+
+Phone: +1-571-762-1680
+
+Email: mushfiqrhmn1@gmail.com
             </div>
          </section>
       </main>
