--- a/index.html
+++ b/index.html
@@ -48,6 +48,23 @@
             </div>
          </section>
 
+         <section id="portfolio" class="portfolio">
+            <div class="container">
+               <h2>Portfolio</h2>
+               <div class="portfolio-items">
+                  <!-- Portfolio Items Here -->
+                  <p>LinkedIn Profile:</p>
+                  <a href="https://www.linkedin.com/in/m-rahman-sdet/">https://www.linkedin.com/in/m-rahman-sdet/</a><br/>
+                  <p>Github Repo:</p>
+                  <a href="https://github.com/PCnslt">https://github.com/PCnslt</a><br/>
+                  <p>E-Commerce website:</p>
+                  <a href="https://promo-services.net/">https://promo-services.net/</a><br/>
+                  <h6>* Some project links may be temporarily unavailable due to hosting cost constraints. Maintaining live demos incurs ongoing expenses, and I appreciate your understanding.</h6>
+               </div>
+            </div>
+         </section>
+
+         <!-- **** MODIFIED CONTACT SECTION **** -->
          <section id="contact" class="contact">
             <div class="container">
                <h2>Contact Me</h2>
@@ -61,21 +78,14 @@
                <!-- The original form is removed -->
             </div>
          </section>
-            <div class="container">
-               <h2>Contact Me</h2>
-               Feel free to reach out directly:
+         <!-- **** END OF MODIFIED SECTION **** -->
 
-Phone: +1-571-762-1680
-
-Email: mushfiqrhmn1@gmail.com
-            </div>
-         </section>
       </main>
 
       <!-- Footer -->
       <footer>
          <div class="container">
-            <p>&copy; 2024 Shawn R. All Rights Reserved.</p>
+            <p>© 2024 Shawn R. All Rights Reserved.</p>
          </div>
       </footer>
 
