--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shawn R. | Modern Portfolio</title>
+    <title>Shawn R.</title>
 
     <!-- Google Fonts (Example: Poppins) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -113,7 +113,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>© 2024 Shawn R. All Rights Reserved.</p>
+            <p>© Shawn R.</p>
         </div>
     </footer>
 
