--- a/index.html
+++ b/index.html
@@ -79,16 +79,20 @@
                 <div class="portfolio-items">
                     <!-- Added divs for individual item styling/animation -->
                     <div class="portfolio-item" data-aos="flip-left" data-aos-delay="0">
-                        <p>LinkedIn Profile:</p>
+                        <p>My LinkedIn Profile:</p>
                         <a href="https://www.linkedin.com/in/m-rahman-sdet/" target="_blank" rel="noopener noreferrer">View Profile</a>
                     </div>
                     <div class="portfolio-item" data-aos="flip-left" data-aos-delay="100">
-                         <p>Github Repo:</p>
+                         <p>My Github Repo:</p>
                         <a href="https://github.com/PCnslt" target="_blank" rel="noopener noreferrer">View Repo</a>
                     </div>
                      <div class="portfolio-item" data-aos="flip-left" data-aos-delay="200">
-                        <p>E-Commerce website:</p>
+                        <p>My E-Commerce website:</p>
                         <a href="https://promo-services.net/" target="_blank" rel="noopener noreferrer">Visit Site</a>
+                    </div>
+                    <div class="portfolio-item" data-aos="flip-left" data-aos-delay="100">
+                         <p>My Resume:</p>
+                        <a href="./Shawn Rahman.pdf" target="_blank" rel="noopener noreferrer">Download Resume</a>
                     </div>
                 </div>
                  <h6 data-aos="fade-up" data-aos-delay="300">* Some project links may be temporarily unavailable due to hosting cost constraints. Maintaining live demos incurs ongoing expenses, and I appreciate your understanding.</h6>
