--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     </div>
                     <div class="portfolio-item" data-aos="flip-left" data-aos-delay="100">
                          <p>My Resume:</p>
-                        <a href="./Shawn Rahman.pdf" target="_blank" rel="noopener noreferrer">Download Resume</a>
+                        <a href="./Shawn_Rahman.pdf" target="_blank" rel="noopener noreferrer">Download Resume</a>
                     </div>
                 </div>
                  <h6 data-aos="fade-up" data-aos-delay="300">* Some project links may be temporarily unavailable due to hosting cost constraints. Maintaining live demos incurs ongoing expenses, and I appreciate your understanding.</h6>
